--- a/laravel-deploy.yml
+++ b/laravel-deploy.yml
@@ -49,6 +49,10 @@
       command: "/usr/bin/php {{ remote_www_root }}/{{ app_root_dir }}/artisan key:generate"
       tags: [ 'laravel', 'artisan:key' ]
 
+    - name: Sets up app storage link
+      command: "/usr/bin/php {{ remote_www_root }}/{{ app_root_dir }}/artisan storage:link"
+      tags: [ 'laravel', 'artisan:storage' ]
+
     - name: Run Migrations + Seeds
       command: "/usr/bin/php {{ remote_www_root }}/{{ app_root_dir }}/artisan migrate --seed"
       tags: [ 'laravel', 'artisan:migrate' ]
