--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,14 +1,15 @@
 ---
 # Initial Server Setup
-remote_user: erika
+remote_user: sammy
 
 # MySQL Setup
-mysql_root_password: mYsQLr007P4ssw0rd
+mysql_root_password: MYSQL_ROOT_PASSWORD
 mysql_app_db: travellist
 mysql_app_user: travellist_user
-mysql_app_pass: password
+mysql_app_pass: DB_PASSWORD
 
 # Web Server Setup
+http_host: "{{ ansible_facts.eth0.ipv4.address }}"
 remote_www_root: /var/www
 app_root_dir: travellist-demo
 document_root: "{{ remote_www_root }}/{{ app_root_dir }}/public"
@@ -17,7 +18,7 @@ document_root: "{{ remote_www_root }}/{{ app_root_dir }}/public"
 app_name: Travellist
 app_env: dev
 app_debug: true
-app_url: http://localhost
+app_url: "http://{{ http_host }}"
 db_host: localhost
 db_port: 3306
 db_database: "{{ mysql_app_db }}"
